update: fix add truck & driver button mobile ui

--- a/client/src/components/common/AdminFilter/AdminFilter.scss
+++ b/client/src/components/common/AdminFilter/AdminFilter.scss
@@ -51,6 +51,7 @@
     overflow: hidden;
     &_wrapper {
       padding: 10px 20px;
+      flex-direction: column;
     }
     &-inner {
       width: 100%;
